@@ -1,4 +1,4 @@
-FROM andy5995/0ad-bin-nodata
+FROM andy5995/0ad-bin-nodata:0.0.26.3
 
 COPY entrypoint.sh /entrypoint.sh
 
